Fix .nav-tabs spacing in a couple areas.

--- a/cartridges/app_storefront_base/cartridge/client/default/scss/_bootstrapOverrides.scss
+++ b/cartridges/app_storefront_base/cartridge/client/default/scss/_bootstrapOverrides.scss
@@ -37,6 +37,7 @@
 
 .nav-tabs {
     border-bottom: $border-width solid $grey3;
+    margin-bottom: 1em;
 
     .nav-link {
         font-size: 1.1rem;
