--- a/cartridges/app_storefront_base/cartridge/client/default/scss/search.scss
+++ b/cartridges/app_storefront_base/cartridge/client/default/scss/search.scss
@@ -331,6 +331,7 @@
 
         .nav-tabs {
             border-bottom: 0 none;
+            margin-bottom: 0;
         }
     }
 
@@ -343,4 +344,10 @@
     position: absolute;
     bottom: 0;
     right: 0;
+}
+
+#content-search-results {
+    > .card {
+        width: 100%;
+    }
 }
